xidlc/tests/invalid/http_security_duplicate_bearer.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidDuplicateBearerSecurityService {
    @http-bearer
    @http-bearer
    @get(path = "/reports")
    string list_reports();
};
